multi-node/misc/digit-cassandra-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: digit-cassandra-exporter
  namespace: digit
  labels:
    prometheus.deckhouse.io/custom-target: digit-cassandra-exporter
  annotations:
    prometheus.deckhouse.io/port: "8890"
    # prometheus.deckhouse.io/path: "/pros/rest/prometheus/metrics"
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8890
    targetPort: 8890
  selector:
    app: digit-cassandra-exporter
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: digit-cassandra-exporter
  namespace: digit
  labels:
    app: digit-cassandra-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digit-cassandra-exporter
  template:
    metadata:
      labels:
        app: digit-cassandra-exporter
    spec:
      containers:
      - name: digit-cassandra-exporter
        image: bitnami/cassandra-exporter:latest
        ports:
        - containerPort: 8890
          name: metrics
        volumeMounts:
        - name: config-volume
          mountPath: /opt/bitnami/cassandra-exporter/config.yml
          subPath: config.yml
          readOnly: true
        # env:
        # - name: CASSANDRA_EXPORTER_CONFIG
        #   value: /etc/digit-cassandra-exporter/cassandra.yml
      volumes:
      - name: config-volume
        configMap:
          name: digit-cassandra-exporter-config
