multi-node/misc/digit-dgepu-deploy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digit-dgepu-ingress
  namespace: digit
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: dgepu.172-21-100-22.sslip.io
    http:
      paths:
      - backend:
          service:
            name: digit-dgepu-service
            port:
              number: 80
        path: /
        pathType: Prefix
